// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listing должен сгенерировать правильные данные для листинга по двигателю 1`] = `
Object {
  "canonical": "https://autoru_frontend.base_domain/cars/audi/all/engine-dizel/",
  "description": "Полный модельный ряд Audi с дизельным двигателем до 600 000 рублей - много Ауди, свежие объявления о продаже от частников и дилеров на Авто.ру.",
  "ogDescription": "Выбирайте Audi с дизельным двигателем до 600 000 рублей - много свежих объявлений о продаже на Авто.ру.",
  "ogTitle": "Смотрите, что нашлось на Авто.ру: Audi с дизельным двигателем до 600 000 рублей - много объявлений",
  "structuredData": Array [
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "http://schema.org/BreadcrumbList",
      "itemListElement": Array [
        Object {
          "@type": "ListItem",
          "item": Object {
            "@id": "https://autoru_frontend.base_domain/",
            "@type": "Thing",
          },
          "name": "Продажа автомобилей",
          "position": 1,
        },
        Object {
          "@type": "ListItem",
          "item": Object {
            "@id": undefined,
            "@type": "Thing",
          },
          "name": "Audi",
          "position": 2,
        },
      ],
    },
  ],
  "title": "Купить Audi с дизельным двигателем до 600 000 рублей - много Ауди с дизельным двигателем на Авто.ру",
}
`;

exports[`listing должен сгенерировать правильные данные для листинга по кузову и цвету 1`] = `
Object {
  "canonical": "https://autoru_frontend.base_domain/cars/audi/all/body-sedan/",
  "description": "Полный модельный ряд Audi седан чёрного цвета до 600 000 рублей - много Ауди, свежие объявления о продаже от частников и дилеров на Авто.ру.",
  "ogDescription": "Выбирайте Audi седан чёрного цвета до 600 000 рублей - много свежих объявлений о продаже на Авто.ру.",
  "ogTitle": "Смотрите, что нашлось на Авто.ру: Audi седан чёрного цвета до 600 000 рублей - много объявлений",
  "structuredData": Array [
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "http://schema.org/BreadcrumbList",
      "itemListElement": Array [
        Object {
          "@type": "ListItem",
          "item": Object {
            "@id": "https://autoru_frontend.base_domain/",
            "@type": "Thing",
          },
          "name": "Продажа автомобилей",
          "position": 1,
        },
        Object {
          "@type": "ListItem",
          "item": Object {
            "@id": undefined,
            "@type": "Thing",
          },
          "name": "Audi",
          "position": 2,
        },
      ],
    },
  ],
  "title": "Купить Audi седан чёрного цвета до 600 000 рублей - много Ауди в кузове седан чёрного цвета на Авто.ру",
}
`;

exports[`listing должен сгенерировать правильные данные для листинга по цвету 1`] = `
Object {
  "canonical": "https://autoru_frontend.base_domain/cars/audi/all/color-chernyj/",
  "description": "Полный модельный ряд Audi чёрного цвета до 600 000 рублей - много Ауди, свежие объявления о продаже от частников и дилеров на Авто.ру.",
  "ogDescription": "Выбирайте Audi чёрного цвета до 600 000 рублей - много свежих объявлений о продаже на Авто.ру.",
  "ogTitle": "Смотрите, что нашлось на Авто.ру: Audi чёрного цвета до 600 000 рублей - много объявлений",
  "structuredData": Array [
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "https://schema.org/Product",
      "brand": "AUDI",
      "color": "серый",
      "description": "На данный автомобиль Вы можете заказать online презентацию. Наш менеджер позвонит Вам (по facetime,…",
      "image": Object {
        "@context": "https://schema.org",
        "@type": "ImageObject",
        "author": "Ауди Центр АВИЛОН",
        "contentUrl": "http://images.mds-proxy.test.avto.ru/get-autoru-all/1895420/3dcd6f3f03c6ea4c70f8ed0dc5ff1fb0/320x240",
        "datePublished": "2019-04-18",
        "description": "Audi A8 55 TFSI Long IV (D5) серого цвета по цене 7 060 000 рублей в Москве",
        "name": "Audi A8 55 TFSI Long IV (D5) серого цвета",
      },
      "name": "Audi A8 55 TFSI Long IV (D5)",
      "offers": Object {
        "@context": "https://schema.org",
        "@type": "AggregateOffer",
        "highPrice": undefined,
        "lowPrice": 0,
        "offerCount": undefined,
        "priceCurrency": "RUB",
      },
      "productionDate": 2018,
    },
    Object {
      "@context": "https://schema.org",
      "@type": "http://schema.org/BreadcrumbList",
      "itemListElement": Array [
        Object {
          "@type": "ListItem",
          "item": Object {
            "@id": "https://autoru_frontend.base_domain/",
            "@type": "Thing",
          },
          "name": "Продажа автомобилей",
          "position": 1,
        },
        Object {
          "@type": "ListItem",
          "item": Object {
            "@id": undefined,
            "@type": "Thing",
          },
          "name": "Audi",
          "position": 2,
        },
      ],
    },
  ],
  "title": "Купить Audi чёрного цвета до 600 000 рублей - много Ауди чёрного цвета на Авто.ру",
}
`;

exports[`страница /history 1`] = `
Object {
  "canonical": "https://autoru_frontend.base_domain/history/",
  "description": "Проверить автомобиль в ПроАвто по VIN коду и гос.номеру на угон, наличие залогов, ограничений и запретов, а также узнать историю обслуживания и размещений на Авто.ру",
  "structuredData": Array [
    Object {
      "@context": "https://schema.org",
      "@type": "FAQPage",
      "mainEntity": Array [
        Object {
          "@type": "Question",
          "acceptedAnswer": Object {
            "@type": "Answer",
            "text": "Часто продавцы хотят скрыть реальную историю автомобиля: скручивают пробег, скрывают информация о залогах и ДТП, нерегулярно проходят ТО. Проверка авто по VIN или госномеру покажет всё это. А вы решите, стоит ли покупать такую машину, или убедитесь, что перед вами автомобиль с чистой историей.",
          },
          "name": "Зачем проверять авто по VIN или государственному номеру перед покупкой?",
        },
        Object {
          "@type": "Question",
          "acceptedAnswer": Object {
            "@type": "Answer",
            "text": "Мы пользуемся официальными базами, данными из тысяч СТО по всей стране, информацией от официальных дилеров. А ещё у нас есть уникальная база объявлений Авто.ру. Более 10 миллионов машин было продано на нашем сайте за 7 лет. Если автомобиль раньше размещался на Авто.ру, в отчёте по VIN мы покажем его историю: когда, в каком состоянии и с каким пробегом он продавался раньше.",
          },
          "name": "Откуда вы берёте данные об истории автомобиля?",
        },
        Object {
          "@type": "Question",
          "acceptedAnswer": Object {
            "@type": "Answer",
            "text": "В отчёте Авто.ру будет следующая информация:<br/>• технические характеристики авто (проверьте, совпадают ли они с описанием в объявлении);<br/>• история автомобиля на Авто.ру (если он раньше продавался на сайте);<br/>• проверка юридической чистоты авто (залог, угон, ограничения на регистрационные действия);<br/>• история обслуживания автомобиля и ремонтов в СТО;<br/>• история владения автомобилем: список собственников по ПТС (сроки владения, физическое или юридическое лицо);<br/>• проверка на ДТП с датами аварий и описанием полученных повреждений.",
          },
          "name": "Что покажет ваша проверка по VIN или госномеру?",
        },
        Object {
          "@type": "Question",
          "acceptedAnswer": Object {
            "@type": "Answer",
            "text": "Когда вы вбиваете VIN или государственный номер автомобиля и нажимаете «Найти», мы онлайн запрашиваем информацию по всем нашим источникам. Проверка каждый раз производится в режиме реального времени, мы показываем те данные, которые есть в базах на момент запроса. Например, если автомобиль заложен после публикации объявления и в базе этот статус обновлён, в отчёте мы покажем ограничения на регистрационные действия.",
          },
          "name": "Как часто вы обновляете данные в отчёте?",
        },
        Object {
          "@type": "Question",
          "acceptedAnswer": Object {
            "@type": "Answer",
            "text": "Мы сделали исследование, чтобы узнать, как часто и на каких машинах скручивают пробег. Чаще всего показания спидометра корректируют у Chrysler, Acura, Dodge — от 25 до 30% машин этих марок ездят со скрученным пробегом. Больше всего машин с честным прошлым у MINI, Bentley, Smart — в этих марках корректируют пробег в каждом 10-ом автомобиле или даже реже. И, конечно, чем старше машина, тем вероятнее корректировка пробега.<br/>Поэтому перед покупкой обязательно проверьте историю автомобиля и честный ли у него пробег. В отчёте по VIN мы используем данные из собственной базы Авто.ру и информацию от станций ТО.",
          },
          "name": "Как часто скручивают пробег? Как определить реальный пробег по VIN?",
        },
        Object {
          "@type": "Question",
          "acceptedAnswer": Object {
            "@type": "Answer",
            "text": "В Свидетельстве о регистрации (СТС) VIN указан в строке «Идентификационный номер», а госномер в строке «Регистрационный знак».<br/>Также эти данные можно найти в Паспорте транспортного средства (ПТС) и полисе ОСАГО.",
          },
          "name": "Где смотреть VIN?",
        },
      ],
    },
  ],
  "title": "Проверка авто по ВИН коду и гос номеру — ПроАвто",
}
`;
